Better collector statement for stream